/*
 * $Id: ChangeLog,v 1.993 2003/04/29 23:55:38 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-30 00:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/tget.prg
    * Removed call to VarGet() in METHOD New() and revised :Type and PusMask() Methods - Clipper compatibility.

2003-04-29 16:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
    % Minor optimizations to hb_compGenJumpThere()

  * source/compiler/harbour.sly
    ! Fixed generation of Default and EndSwitch when NO EXIT statement precedes DEFAULT/END statements.

  * source/rtl/cstr.prg
    ! Few minor fixes to ValToPrg().
    * Replaced all __ErrRT_BASE() with Throw( ErrorNew( ... ) )

  * source/rtl/objfunc.prg
    ! Fixed __ObjGetValueDiff() support of CodeBlock properties.

  * source/vm/classes.c
    ! Fixed scope validation to allow derived classes access to PROTECTED properties.

  * source/vm/hvm.c
    * Corrected compiler warning.

2003-04-27 12:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rdd/dbfntx/dbfntx1.c
     * casts at 3636 and 3640
  * source/vm/thread.c
     * cast at 763
  * source/odbc/odbc.c
     * cast @ 242 and 256
  * source/rtl/gtwin/gtwin.c
     * Min tone duration is 1, not 0
     ! corrected Tick caclulation to always be 1000/18.2 even if _MSC

2003-04-26 17:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmSend() to auto convert hb___msgGetData() to hb___msgSetData if [1] paramater passed.
      Clipper compabtibility.

2003-04-26 13:25 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/radiogrp.prg
    ! Fixed an Bug on Select method
      Minor Formatting
  * source/rtl/ListBox.prg
    ! Fixed problem when an caption is passed
      Minor Formatting

2003-04-26 01:02 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>