@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.993 2003/04/29 23:55:38 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.994 2003/04/30 07:11:48 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-30 08:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * source/rtl/tprinter.c
+  * source/rtl/isprint.c
+    ! Added | PRINTER_ENUM_SHARED to Call to EnumPrinters
 
 2003-04-30 00:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/tget.prg
